--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = logseq-migration
-version = 0.1.6
+version = 0.1.9
 author = Romilly Cocking
 author_email = romilly.cocking@gmail.com
 description = Download and use local copies of assets in logseq after importing a file from Roam.
@@ -25,7 +25,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    localise_assets = logsqeq.migration.migrater:main
+    localise_assets = logseq.migration.migrater:main
 
 [options.packages.find]
 where = src
